--- a/alibaba_service/assets/stylesheets/scss/_main.scss
+++ b/alibaba_service/assets/stylesheets/scss/_main.scss
@@ -1990,7 +1990,7 @@
     top: 51px;
     border-bottom: 2px solid transparent;
     box-sizing: border-box;
-    z-index: 999;
+    z-index: 998;
 
     &_bgc {
       background-color: $color_white;
